# Epoll-lib

./: .gitignore  CMakeLists.txt  README.md  echo_client.cpp  echo_server.cpp
src/: check.h  epoll_event_register.cpp  epoll_event_register.h  event_callback.h  event_manager.cpp  event_manager.h  event_register.h  method_thread.h  scoped_lock.h
